@@ -2,6 +2,6 @@ DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 
 DIST upkern-3.1.9.tar.gz 20215 RMD160 f5f6190372c9a067d397bbe05f99b05e7212161b SHA1 90dd99a982729c5a27f3d97ddc4ed40e5c54925e SHA256 791c39279b019b285afc1ae7dd409e498909b1a1fd3e115a93967fc040cdaccd
 EBUILD upkern-3.1.8.ebuild 830 RMD160 4c95c1193cfbcd68899ffd1bd910663572e0e79e SHA1 bdbf548ad52a308df62d7095d4612292e103b387 SHA256 3bf6565960b3e3d459fcefadc8c469f3f69e1d6f902362cfa7297986a2eefeaf
 EBUILD upkern-3.1.9.ebuild 859 RMD160 576d7886aa7cd6c7f7c7eeb5032cbb8db5334386 SHA1 efd10847107f1cea8cf42898f4bfa84fde09a5ad SHA256 a7e08e28440b45245e59c219c87a26cc8b7cccd7e0ecece074b2414bc1e254d8
-EBUILD upkern-9999.ebuild 568 RMD160 1d1ee3cdb31a645426bad688de4aa870d07da878 SHA1 4984f0e56d608aace408947772093e970a339402 SHA256 7a25914a782adec6e84ddfc58acfde1747107a9e0676842167ebd949906b575f
-MISC ChangeLog 2649 RMD160 94018bb0e40684ecfa4d2d0fd680bfb9c0f92a36 SHA1 c4dfb5b9aa9a2c3cd6c2ab5b1cbb37446df91fc8 SHA256 781c7465162846d3750ab09c207e8cdd238e8992d2195a0686328f620a56b213
+EBUILD upkern-9999.ebuild 684 RMD160 096d3bac6e5e18ea6aeda0294fd750dc07c3c572 SHA1 d47b657a5e044d9c3d08bcf30ac9ca25822c8991 SHA256 ee82c3a3ab84b0a54f24ffaf82cfa81da56db987cc4528c9bb1f09707a2b0de9
+MISC ChangeLog 2740 RMD160 0e1cec6783d53edf1b896c4446e9fd9614b21aac SHA1 31f0bf0008c419801f86029e30e66479cda62098 SHA256 11aac4e12f236e115b2a94715cdffad7b707a1ce042fb99d51c9510dd24abcc6
 MISC metadata.xml 384 RMD160 81ffa6035c7e7627d6551b470adac8ca87607eab SHA1 ec634b494e8b5f392294651a3bd6ceacd9a6a25f SHA256 bc16e6148bb9ad2a18b1c4d2778593286c62c0bc4700743c0d360c84a0439b02
