@@ -23,3 +23,9 @@ IUSE="module-rebuild"
 RDEPEND=">=app-portage/gentoolkit-0.3"
 DEPEND="${RDEPEND}"
 PDEPEND="module-rebuild? ( sys-kernel/module-rebuild )"
+
+src_install() {
+	distutils_src_install
+
+	doman "${D}"/usr/share/man/man8/upkern.8 || die "doman upkern.8 failed"
+}
